--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.jdbc.batch_size=36
+spring.jpa.properties.hibernate.order_inserts = true
+spring.jpa.properties.hibernate.order_updates = true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data = true
 
